change project img and link

--- a/index.html
+++ b/index.html
@@ -4,32 +4,16 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Sujoy Ghosal | Frontend Developer & UX Enthusiast</title>
-    <meta
-      name="description"
-      content="Frontend Developer Portfolio | Expertise in HTML, CSS, JavaScript, React, Boostrap, Tailwind Css php & dabase. Browse my projects and discover how I craft seamless web experiences."
-    />
+    <meta name="description" content="Frontend Developer Portfolio | Expertise in HTML, CSS, JavaScript, React, Boostrap, Tailwind Css php & dabase. Browse my projects and discover how seamless web experiences." />
 
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <!-- Favicon -->
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="assets/images/favicon.ico"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
     <!-- CSS 
 
     <-- Add this in <head> -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <link  rel="stylesheet"  href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <!-- ============================================ -->
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/vendor/slick.css" />
@@ -208,10 +192,8 @@
               </button>
             </div>
           </div>
-          <p class="discription">
-            it's Sujoy Ghosal's personal portfolio template. are you want to
-            like this? please contact with him.
-          </p>
+          <p class="description">This is Sujoy Ghosal’s personal portfolio.  Like what you see? Feel free to get in touch for collaboration or web projects.</p>
+
         </div>
         <div class="content">
           <ul class="primary-menu nav nav-pills">
@@ -359,13 +341,13 @@
 
                 <!-- Tagline -->
                 <p class="hero-tagline mt-4">
-                  Crafting <strong>responsive</strong>,
-                  <strong>scalable</strong>, and
-                  <strong>modern web applications</strong> with
-                  <strong>React.js, JavaScript (ES6+), and Tailwind CSS</strong
-                  >. Passionate about building UI that delivers seamless user
-                  experiences.
+                  Crafting <strong>responsive</strong>, <strong>scalable</strong>, and
+                  <strong>modern web applications</strong> using
+                  <strong>React.js</strong>, <strong>JavaScript (ES6+)</strong>, and
+                  <strong>Tailwind CSS</strong>. Passionate about building
+                  <strong>clean UI</strong> and delivering <strong>seamless user experiences</strong>.
                 </p>
+
 
                 <!-- Buttons -->
                 <div class="button-area mb-5">
@@ -1049,13 +1031,13 @@
             <div class="rn-portfolio">
               <div class="inner">
                 <div class="thumbnail">
-                  <a href="https://fashionstorein.netlify.app/" target="_blank">
+                  <a href="https://sujoygitt.github.io/fashion-store-v2" target="_blank">
                     <img src="assets/images/portfolio/portfolio-01.webp" alt="E-commerce Project" />
                   </a>
                 </div>
                 <div class="content">
                   <h4 class="title">
-                    <a href="https://fashionstorein.netlify.app/" target="_blank">
+                    <a href="https://sujoygitt.github.io/fashion-store-v2" target="_blank">
                       🛒 React E-Shop — Scalable E-commerce App
                       <i class="feather-arrow-up-right"></i>
                     </a>
