add project in my portfolio section

--- a/index.html
+++ b/index.html
@@ -1053,6 +1053,32 @@
             <div class="rn-portfolio">
               <div class="inner">
                 <div class="thumbnail">
+                  <a href="https://sujoygitt.github.io/jira-board-clone/" target="_blank">
+                    <img src="assets/images/demo/zira-clone.webp" alt="Jira Board Clone" />
+                  </a>
+                </div>
+                <div class="content">
+                  <h4 class="title">
+                    <a href="https://sujoygitt.github.io/jira-board-clone/" target="_blank">
+                      📋 Jira Board Clone
+                      <i class="feather-arrow-up-right"></i>
+                    </a>
+                  </h4>
+                  <p>
+                    A Jira-inspired project management board with drag-and-drop tasks,
+                    columns, and a clean modern UI.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <!-- Weather App -->
+          <div data-aos="fade-up" data-aos-delay="200" class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50">
+            <div class="rn-portfolio">
+              <div class="inner">
+                <div class="thumbnail">
                   <a href="https://sujoygitt.github.io/weather-app/" target="_blank">
                     <img src="assets/images/demo/weather.webp" alt="Weather App" />
                   </a>
@@ -1114,27 +1140,7 @@
             </div>
           </div>
 
-          <!-- Cyberfiction -->
-          <div data-aos="fade-up" data-aos-delay="500" class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50">
-            <div class="rn-portfolio">
-              <div class="inner">
-                <div class="thumbnail">
-                  <a href="https://sujoygitt.github.io/CYBERFICTION/" target="_blank">
-                    <img src="assets/images/portfolio/portfolio-05.webp" alt="Cyberfiction" />
-                  </a>
-                </div>
-                <div class="content">
-                  <h4 class="title">
-                    <a href="https://sujoygitt.github.io/CYBERFICTION/" target="_blank">
-                      🚀 Cyberfiction — Animated Landing Page
-                      <i class="feather-arrow-up-right"></i>
-                    </a>
-                  </h4>
-                  <p>Immersive landing page using GSAP animations & scroll-triggered effects.</p>
-                </div>
-              </div>
-            </div>
-          </div>
+          
 
           <!-- Food Ordering -->
           <div data-aos="fade-up" data-aos-delay="600" class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50">
@@ -1485,6 +1491,29 @@
               <div class="tab-pane show active" id="demodark" role="tabpanel" aria-labelledby="demodark-tab">
                 <div class="content">
                   <div class="row">
+                    <!-- Cyberfiction -->
+      
+                       <!-- Cyberfiction -->
+                    <div class="col-lg-4 col-md-6 col-12">
+                      <div class="single-demo">
+                        <div class="inner">
+                          <div class="thumbnail">
+                            <a href="https://sujoygitt.github.io/CYBERFICTION/" target="_blank">
+                              <img class="w-100" src="assets/images/portfolio/portfolio-05.webp" alt="Cyberfiction" />
+                              <span class="overlay-content">
+                                <span class="overlay-text">View Demo <i class="feather-external-link"></i></span>
+                              </span>
+                            </a>
+                          </div>
+                          <div class="inner">
+                            <h3 class="title">
+                              <a href="https://sujoygitt.github.io/CYBERFICTION/" target="_blank">🚀 Cyberfiction — Animated Landing Page</a>
+                            </h3>
+                            <p>Immersive landing page using GSAP animations & scroll-triggered effects.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
 
                     <!-- Project: Drawing WebApp -->
                     <div class="col-lg-4 col-md-6 col-12">
