add toggle theme feature , change profile img , modify content

--- a/index.html
+++ b/index.html
@@ -30,8 +30,27 @@
     data-target=".navbar-example2"
     data-offset="150"
   >
+  <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
+  <!-- Sun Icon (for dark theme) -->
+  <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <circle cx="12" cy="12" r="5"></circle>
+    <line x1="12" y1="1" x2="12" y2="3"></line>
+    <line x1="12" y1="21" x2="12" y2="23"></line>
+    <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+    <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+    <line x1="1" y1="12" x2="3" y2="12"></line>
+    <line x1="21" y1="12" x2="23" y2="12"></line>
+    <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+    <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+  </svg>
+  
+  <!-- Moon Icon (for light theme) -->
+  <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+  </svg>
+</button>
     <!-- start Header area -->
-    <div class="d-none d-xl-block header-style-2">
+    <div class="d-none d-xl-block header-style-2 ">
       <header
         class="rn-header-area d-flex align-items-start flex-column left-header-style"
       >
@@ -192,7 +211,7 @@
               </button>
             </div>
           </div>
-          <p class="description">This is Sujoy Ghosal’s personal portfolio.  Like what you see? Feel free to get in touch for collaboration or web projects.</p>
+          <p class="description">This is Sujoy Ghosal’s personal portfolio. If you like what you see, feel free to get in touch for collaborations or web projects.</p>
 
         </div>
         <div class="content">
@@ -1458,11 +1477,11 @@
       <!-- End Contact section -->
 
       <!-- Start Right Demo  -->
-      <div class="rn-right-demo">
+      <!-- <div class="rn-right-demo">
         <button class="demo-button">
           <span class="text">Demos</span>
         </button>
-      </div>
+      </div> -->
       <!-- End Right Demo  -->
 
       <!-- Start Modal Area -->
