Set defaultl theme light, change img , Resume , modify some style

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                   >
                   <a
                     class="rn-btn"
-                    href="assets/Sujoy Ghosal.pdf"
+                    href="assets/Sujoy_Ghosal_Frontend_React_Developer.pdf"
                     target="_blank"
                   >
                     <span>📄 Download Resume</span>
