changes some content

--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
                 <span class="cd-headline clip is-full-width">
                   <span>I am a</span>
                   <span class="cd-words-wrapper">
-                    <b class="is-visible">React.js Frontend Developer</b>
+                    <b class="is-visible">Frontend Developer </b>
                     <b class="is-hidden">JavaScript Enthusiast</b>
-                    <b class="is-hidden">Freelancer</b>
+                    <b class="is-hidden">React Developer</b>
                   </span>
                 </span>
 
@@ -425,22 +425,15 @@
               <div class="about-inner">
                 <h2 class="section-title text-dark">About Me</h2>
                 <p class="about-text mt-3">
-                  Hi, I’m <strong>Sujoy Ghosal</strong>, a passionate
-                  <strong>Frontend Developer</strong> specializing in
-                  <strong>React.js</strong> and modern web technologies.
-                  Currently working as an <strong>Frontend Developer</strong>, I
-                  am transitioning into a full-fledged React Developer role.
+                 Hi, I’m Sujoy Ghosal, a Frontend / React Developer with 2+ years of experience.
+                  I specialize in building responsive, scalable web applications using React,
+                  JavaScript (ES6+), and Tailwind CSS.
                 </p>
 
                 <p class="about-text">
-                  I love crafting clean, responsive, and user-friendly web
-                  applications. My expertise includes
-                  <strong>JavaScript (ES6+)</strong>, <strong>React.js</strong>,
-                  <strong>Tailwind CSS</strong>, and
-                  <strong>Git/GitHub</strong>. My goal is to contribute to
-                  high-impact projects while continuously improving my skills
-                  and growing into a <strong>Frontend Engineer</strong>
-                  capable of building products at scale.
+                    Currently working as a Remote Frontend Developer for a UK-based company.
+                    I enjoy converting Figma designs into clean, high-performance user interfaces
+                    and building reusable React components.
                 </p>
 
                 <!-- Quick Facts -->
@@ -1061,7 +1054,7 @@
                       <i class="feather-arrow-up-right"></i>
                     </a>
                   </h4>
-                  <p>Built with React + Context API. Cart persistence, checkout flow & fully responsive UI.</p>
+                  <p>Scalable React e-commerce app with API integration, reusable components, and responsive UI.</p>
                 </div>
               </div>
             </div>
