update portfolio section

--- a/index.html
+++ b/index.html
@@ -410,14 +410,18 @@
                   <strong>performance optimization</strong>, and translating
                   <strong>Figma designs</strong> into production-ready UI.
                 </p>
-                <p class="mt-3" style="opacity: 0.8; ">
+                <p class="mt-3" style="opacity: 0.8">
                   Open to
                   <strong>Remote / WFH Frontend Developer</strong> opportunities
                 </p>
 
                 <!-- Buttons -->
                 <div class="button-area mb-5">
-                  <a class="rn-btn" href="assets/Sujoy_Ghosal_Frontend_React_Developer.pdf" target="_blank">
+                  <a
+                    class="rn-btn"
+                    href="assets/Sujoy_Ghosal_Frontend_React_Developer.pdf"
+                    target="_blank"
+                  >
                     <span>📄 Download Resume</span>
                   </a>
                   <a class="rn-btn" href="#portfolio">
@@ -427,7 +431,6 @@
                     <span>📬 Contact Me</span>
                   </a>
                 </div>
-
 
                 <!-- Quick Connect Icons -->
                 <div class="social-icons mt-4">
@@ -1090,6 +1093,47 @@
           </div>
 
           <div class="row row--25 mt--10 mt_md--10 mt_sm--10">
+            <!-- Task Management Dashboard -->
+            <div
+              data-aos="fade-up"
+              data-aos-delay="100"
+              class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50"
+            >
+              <div class="rn-portfolio">
+                <div class="inner">
+                  <div class="thumbnail">
+                    <a
+                      href="https://sujoygitt.github.io/task-management-system/"
+                      target="_blank"
+                    >
+                      <img
+                        src="../assets/images/demo/Screenshot_5.png"
+                        alt="Task Management Dashboard"
+                      />
+                    </a>
+                  </div>
+
+                  <div class="content">
+                    <h4 class="title">
+                      <a
+                        href="https://sujoygitt.github.io/task-management-system/"
+                        target="_blank"
+                      >
+                        🧠 Task Management Dashboard
+                        <i class="feather-arrow-up-right"></i>
+                      </a>
+                    </h4>
+
+                    <p>
+                      Role-based task management system with authentication,
+                      Kanban workflow, drag-and-drop tasks, analytics dashboard,
+                      and light/dark mode.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <!-- E-Commerce -->
             <div
               data-aos="fade-up"
@@ -1168,7 +1212,7 @@
             </div>
 
             <!-- Weather App -->
-            <div
+            <!-- <div
               data-aos="fade-up"
               data-aos-delay="200"
               class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50"
@@ -1203,7 +1247,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <!-- YouTube Clone
             <div
