--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
                       target="_blank"
                     >
                       <img
-                        src="../assets/images/demo/Screenshot_5.png"
+                        src="../assets/images/demo/task-dashboard.webp"
                         alt="Task Management Dashboard"
                       />
                     </a>
@@ -1212,7 +1212,7 @@
             </div>
 
             <!-- Weather App -->
-            <!-- <div
+            <div
               data-aos="fade-up"
               data-aos-delay="200"
               class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50"
@@ -1247,9 +1247,9 @@
                   </div>
                 </div>
               </div>
-            </div> -->
+            </div>
 
-            <!-- YouTube Clone
+             <!-- YouTube Clone -->
             <div
               data-aos="fade-up"
               data-aos-delay="300"
@@ -1288,7 +1288,7 @@
             </div>
 
             <!-- Facebook Clone -->
-            <!-- <div
+            <div
               data-aos="fade-up"
               data-aos-delay="400"
               class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50"
@@ -1323,7 +1323,7 @@
                   </div>
                 </div>
               </div>
-            </div> -->
+            </div>
 
             <!-- Food Ordering -->
             <!-- <div
