update portfolio section

--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
                       target="_blank"
                     >
                       <img
-                        src="../assets/images/demo/task-dashboard.webp"
+                        src="assets/images/demo/task-dashboard.webp"
                         alt="Task Management Dashboard"
                       />
                     </a>
